--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Connect to Account</title>
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <!-- Firebase SDKs (compat) -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
@@ -28,7 +30,7 @@
         margin-bottom: 2rem;
         font-size: 2rem;
       }
-      /* Auth and App cards */
+      /* Auth and App cards centered content */
       #auth, #app {
         background: #1A1A1A;
         padding: 2rem;
@@ -36,6 +38,12 @@
         box-shadow: 0 4px 12px rgba(0,0,0,0.5);
         width: 320px;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* ensure enough height for centering */
+        min-height: 350px;
       }
       /* Inputs */
       input {
