--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        /* ensure enough height for centering */
         min-height: 350px;
+      }
+      /* Hide #app by default, #auth shown */
+      #app {
+        display: none;
       }
       /* Inputs */
       input {
@@ -78,16 +81,6 @@
         font-size: 0.9rem;
         color: #F87171;
       }
-      /* Hide app area until login */
-      #app {
-        display: none;
-      }
-      #app h3 {
-        margin-top: 1rem;
-      }
-      #wallet-info, #balance, #deposit-msg {
-        margin: 0.75rem 0;
-      }
     </style>
   </head>
   <body>
@@ -95,7 +88,7 @@
 
     <div id="auth">
       <h2>Sign Up / Log In</h2>
-      <input id="email"    type="email"    placeholder="Email" />
+      <input id="email" type="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
       <button id="signup">Sign Up</button>
       <button id="login">Log In</button>
@@ -116,102 +109,93 @@
     </div>
 
     <script>
-    // Initialize Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyATdSh9jZBAvR6PjV7X-3VVKWZDB2Tld1I",
-      authDomain: "vetra-login-39106.firebaseapp.com",
-      projectId: "vetra-login-39106",
-      storageBucket: "vetra-login-39106.firebasestorage.app",
-      messagingSenderId: "1080730669130",
-      appId: "1:1080730669130:web:fe6bf5694779f4096f16b3",
-      measurementId: "G-0T7NT0E96Z"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+      // Initialize Firebase
+      const firebaseConfig = { /* your config */ };
+      firebase.initializeApp(firebaseConfig);
+      const auth = firebase.auth();
+      const db = firebase.firestore();
 
-    // Element refs
-    const emailInput    = document.getElementById("email");
-    const passwordInput = document.getElementById("password");
-    const authMsg       = document.getElementById("auth-msg");
-    const authDiv       = document.getElementById("auth");
-    const appDiv        = document.getElementById("app");
-    const userEmailSpan = document.getElementById("user-email");
-    const signupBtn     = document.getElementById("signup");
-    const loginBtn      = document.getElementById("login");
-    const logoutBtn     = document.getElementById("logout");
-    const connectBtn    = document.getElementById("connect-wallet");
-    const walletInfoP   = document.getElementById("wallet-info");
-    const balanceP      = document.getElementById("balance");
-    const depositMsgP   = document.getElementById("deposit-msg");
+      // Element refs
+      const emailInput = document.getElementById('email');
+      const passwordInput = document.getElementById('password');
+      const authMsg = document.getElementById('auth-msg');
+      const authDiv = document.getElementById('auth');
+      const appDiv = document.getElementById('app');
+      const userEmailSpan = document.getElementById('user-email');
+      const signupBtn = document.getElementById('signup');
+      const loginBtn = document.getElementById('login');
+      const logoutBtn = document.getElementById('logout');
+      const connectBtn = document.getElementById('connect-wallet');
+      const walletInfoP = document.getElementById('wallet-info');
+      const balanceP = document.getElementById('balance');
+      const depositMsgP = document.getElementById('deposit-msg');
 
-    // Auth handlers
-    signupBtn.onclick = () => auth.createUserWithEmailAndPassword(
-      emailInput.value, passwordInput.value
-    ).then(() => authMsg.textContent = "Signed up! Please log in.")
-     .catch(err => authMsg.textContent = err.message);
+      // Auth handlers
+      signupBtn.onclick = () => auth.createUserWithEmailAndPassword(
+        emailInput.value, passwordInput.value
+      ).then(() => authMsg.textContent = 'Signed up! Please log in.')
+       .catch(err => authMsg.textContent = err.message);
 
-    loginBtn.onclick = () => auth.signInWithEmailAndPassword(
-      emailInput.value, passwordInput.value
-    ).catch(err => authMsg.textContent = err.message);
+      loginBtn.onclick = () => auth.signInWithEmailAndPassword(
+        emailInput.value, passwordInput.value
+      ).catch(err => authMsg.textContent = err.message);
 
-    // Auth state listener
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        authDiv.style.display = "none";
-        appDiv.style.display  = "block";
-        userEmailSpan.textContent = user.email;
-      } else {
-        authDiv.style.display = "block";
-        appDiv.style.display  = "none";
-      }
-    });
-
-    // Wallet connect/disconnect logic
-    connectBtn.onclick = async () => {
-      if (!window.solana || !window.solana.isPhantom) {
-        alert("Phantom wallet not found. Please install Phantom.");
-        return;
-      }
-      if (!window.solana.isConnected) {
-        try {
-          const resp = await window.solana.connect();
-          const pubkey = resp.publicKey.toString();
-          walletInfoP.textContent = "Address: " + pubkey;
-          depositMsgP.textContent = "Send SOL to this address above to deposit funds.";
-          connectBtn.textContent = "Disconnect Phantom Wallet";
-          const uid = auth.currentUser.uid;
-          await db.collection("users").doc(uid).set({ id: uid, pubkey }, { merge: true });
-          updateBalance(pubkey);
-          window.solana.on("disconnect", () => resetWalletUI());
-        } catch (err) {
-          console.error(err);
-          alert("Wallet connection failed: " + err.message);
+      // Listen for auth state and toggle visibility without overriding flex display
+      auth.onAuthStateChanged(user => {
+        if (user) {
+          authDiv.style.display = 'none';
+          appDiv.style.display = ''; // Fall back to CSS display:flex
+          userEmailSpan.textContent = user.email;
+        } else {
+          authDiv.style.display = ''; // Fall back to CSS display:flex
+          appDiv.style.display = 'none';
         }
-      } else {
-        await window.solana.disconnect();
-        resetWalletUI();
+      });
+
+      // Wallet connect/disconnect logic
+      connectBtn.onclick = async () => {
+        if (!window.solana || !window.solana.isPhantom) {
+          return alert('Phantom wallet not found. Please install Phantom.');
+        }
+        if (!window.solana.isConnected) {
+          try {
+            const resp = await window.solana.connect();
+            const pubkey = resp.publicKey.toString();
+            walletInfoP.textContent = 'Address: ' + pubkey;
+            depositMsgP.textContent = 'Send SOL to this address above to deposit funds.';
+            connectBtn.textContent = 'Disconnect Phantom Wallet';
+            const uid = auth.currentUser.uid;
+            await db.collection('users').doc(uid).set({ id: uid, pubkey }, { merge: true });
+            updateBalance(pubkey);
+            window.solana.on('disconnect', resetWalletUI);
+          } catch (err) {
+            console.error(err);
+            alert('Wallet connection failed: ' + err.message);
+          }
+        } else {
+          await window.solana.disconnect();
+          resetWalletUI();
+        }
+      };
+
+      function resetWalletUI() {
+        walletInfoP.textContent = '';
+        balanceP.textContent = '-- SOL';
+        depositMsgP.textContent = 'Connect with Phantom to deposit money.';
+        connectBtn.textContent = 'Connect Phantom Wallet';
       }
-    };
 
-    function resetWalletUI() {
-      walletInfoP.textContent = "";
-      balanceP.textContent = "-- SOL";
-      depositMsgP.textContent = "Connect with Phantom to deposit money.";
-      connectBtn.textContent = "Connect Phantom Wallet";
-    }
+      async function updateBalance(pubkey) {
+        const connection = new solanaWeb3.Connection(
+          'https://api.mainnet-beta.solana.com', 'confirmed'
+        );
+        const balance = await connection.getBalance(
+          new solanaWeb3.PublicKey(pubkey)
+        );
+        balanceP.textContent = (balance / solanaWeb3.LAMPORTS_PER_SOL).toFixed(4) + ' SOL';
+      }
 
-    async function updateBalance(pubkey) {
-      const connection = new solanaWeb3.Connection(
-        "https://api.mainnet-beta.solana.com", "confirmed"
-      );
-      const balance = await connection.getBalance(
-        new solanaWeb3.PublicKey(pubkey)
-      );
-      balanceP.textContent = (balance / solanaWeb3.LAMPORTS_PER_SOL).toFixed(4) + " SOL";
-    }
-
-    logoutBtn.onclick = () => auth.signOut();
+      logoutBtn.onclick = () => auth.signOut();
     </script>
   </body>
 </html>
