--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
       margin-bottom: 2rem;
       font-size: 2rem;
     }
-    /* Card container for auth and app */
+    /* Card container for auth and app, fixed height 500px */
     .card {
       background: #1A1A1A;
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.5);
       width: 320px;
+      height: 500px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -55,11 +56,11 @@
       color: white;
       font-size: 1rem;
     }
-    /* Buttons */
+    /* Buttons: default and specific */
     button {
       width: 100%;
       padding: 0.75rem;
-      background: #6366F1;
+      background: #1F2025;
       color: white;
       border: 6px solid #222222;
       border-radius: 4px;
@@ -67,8 +68,12 @@
       cursor: pointer;
       transition: background 0.2s;
     }
+    /* Phantom connect button special background */
+    button#connect-wallet {
+      background: #AB9FF2;
+    }
     button:hover {
-      background: #4F46E5;
+      background: #1F2025;
     }
     /* Message text */
     .message {
