--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
       font-family: 'Segoe UI', Roboto, sans-serif;
       text-align: center;
     }
-    h1#main-heading {
-      margin-bottom: 2rem;
-      font-size: 2rem;
-    }
     /* Card container for auth and app, fixed height 500px */
     .card {
       background: #1A1A1A;
@@ -60,7 +56,7 @@
     button {
       width: 100%;
       padding: 0.75rem;
-      background: #1F2025;
+      background: #68C2EC;
       color: white;
       border: 6px solid #222222;
       border-radius: 4px;
@@ -73,7 +69,7 @@
       background: #AB9FF2;
     }
     button:hover {
-      background: #1F2025;
+      background: #68C2EC;
     }
     /* Message text */
     .message {
@@ -84,7 +80,6 @@
   </style>
 </head>
 <body>
-  <h1 id="main-heading">Connect to Account</h1>
   <!-- Authentication Card -->
   <div id="auth" class="card">
     <h2>Sign Up / Log In</h2>
@@ -126,7 +121,6 @@
     const authMsg = document.getElementById('auth-msg');
     const authDiv = document.getElementById('auth');
     const appDiv = document.getElementById('app');
-    const header = document.getElementById('main-heading');
     const userEmailSpan = document.getElementById('user-email');
     const signupBtn = document.getElementById('signup');
     const loginBtn = document.getElementById('login');
@@ -154,12 +148,9 @@
       if (user) {
         authDiv.style.display = 'none';
         appDiv.style.display = 'flex';
-        header.style.display = 'none';
-        userEmailSpan.textContent = user.email;
       } else {
         authDiv.style.display = 'flex';
         appDiv.style.display = 'none';
-        header.style.display = 'block';
       }
     });
 
